--- a/Client/package.json
+++ b/Client/package.json
@@ -13,6 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -21,14 +22,16 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/redux-logger": "^3.0.9",
-    "@reduxjs/toolkit": "^1.8.5",
-    "typescript": "^4.8.4"
+    "dotenv": "^16.0.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.75.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
