--- a/Server/package.json
+++ b/Server/package.json
@@ -11,18 +11,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.8.0"
   },
   "devDependencies": {
-    "@types/pg": "^8.6.5",
-    "dotenv": "^16.0.3",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
     "@types/nodemon": "^1.19.2",
+    "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
+    "dotenv": "^16.0.3",
     "jest": "^29.3.0",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.1",
