--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemailer": "^6.8.0",
     "pg": "^8.8.0"
   },
   "devDependencies": {
@@ -21,9 +22,11 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.2",
     "@types/node": "^18.11.9",
+    "@types/nodemailer": "^6.4.6",
     "@types/nodemon": "^1.19.2",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
+    "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
     "jest": "^29.3.0",
     "nodemon": "^2.0.20",
