--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles --forceExit",
     "start": "nodemon index.ts"
   },
   "keywords": [],
@@ -30,11 +30,14 @@
     "@types/nodemon": "^1.19.2",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "buffer": "^6.0.3",
     "dotenv": "^16.0.3",
-    "jest": "^29.3.0",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.1",
+    "superagent": "^8.0.5",
+    "supertest": "^6.3.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
