--- a/Server/package.json
+++ b/Server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "test": "jest --detectOpenHandles --forceExit",
+    "test": "jest --config --detectOpenHandles --watchAll --no-cache",
     "start": "nodemon index.ts"
   },
   "keywords": [],
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^8.5.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.8.0",
     "pg": "^8.8.0"
