tests for deleting user

--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -6,6 +6,6 @@
       "removeComments": true,
       "preserveConstEnums": true,
       "sourceMap": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
     }
 }
